small mobile overflow x fix

--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -105,6 +105,7 @@
     html,
     body {
         overflow-x: hidden !important;
+        width: 100vw !important;
     }
 
     body {
